# Arduino_knob

./: .gitignore  CMakeLists.txt  README.md  main.cpp
arduino_src/include/: AnalogPin.hpp  Potpin.hpp
arduino_src/src/: main.cpp
include/: MovingAverageFilter.hpp
